--- a/project_midway/midway-report.tex
+++ b/project_midway/midway-report.tex
@@ -36,17 +36,12 @@ Carnegie Mellon University \\
 
 \maketitle
 
-\begin{abstract}
+\input{abstract}
 
-\end{abstract}
-
-\section{Question and Goals}
-Question and Goals (10 points): State the updated version of the research question, based on results so far. Is it well-formed and interesting? Are there well-defined metrics for success? Is the minimum goal achievable in the remaining time? Are the stretch goals interesting?
-
-\section{Data set}
-Data set (5 points): Is the data set completely ready (in-hand, loaded onto a machine, analyzed for outliers or other problems)? Have some main features of the data set been characterized (either visually or statistically)?
-
-\section{First Steps and Evaluation}
-First Steps and Evaluation (10 points): Were the first steps described in the project proposal completed? Are there nontrivial preliminary results in terms of system performance or data collection (if data collection is a significant part of the project)? Is the interpretation of these results careful and correct? Is there an assessment of where the project stands? Are next steps clear, including any course corrections based on preliminary results?
+% sections
+\input{intro}
+\input{related}
+\input{meth}
+\input{result}
 
 \end{document}
