--- a/project_midway/midway-report.tex
+++ b/project_midway/midway-report.tex
@@ -1,6 +1,7 @@
 \documentclass{article} % For LaTeX2e
 \usepackage{nips14submit_e,times}
 \usepackage{hyperref}
+\hypersetup{pdfstartview={FitH},colorlinks=false,pdfborder={0 0 0},}
 \usepackage{url}
 %\documentstyle[nips14submit_09,times,art10]{article} % For LaTeX 2.09
 
@@ -43,5 +44,8 @@ Carnegie Mellon University \\
 \input{related}
 \input{meth}
 \input{result}
+
+\bibliographystyle{IEEEtran}
+\bibliography{IEEEabrv,refs}
 
 \end{document}
