Wrote two paragraphs, not sure about Metrics part.

--- a/project_midway/intro.tex
+++ b/project_midway/intro.tex
@@ -1,12 +1,27 @@
 \section{Introduction}
 \label{sec:intro}
 
-Question and Goals (10 points): State the updated version of the research question, based on results so far. Is it well-formed and interesting? Are there well-defined metrics for success? Is the minimum goal achievable in the remaining time? Are the stretch goals interesting?
+%%%% Question and Goals (10 points): State the updated version of the research question, based on results so far. Is it well-formed and interesting? Are there well-defined metrics for success? Is the minimum goal achievable in the remaining time? Are the stretch goals interesting?
 
 {\bf Problem:}
+Large-scale deep neutral network models have become increasingly popular
+to solve hard classification problems and have demonstrated sigificant
+improvements in accuracy. Due to the scale of the neutral network and the
+scale of the input data set, performance, in addition to accuracy, has
+become a significant factor in such deep learning implementations.
 
 {\bf Goal:}
+We intend to comprehensively study how adding noise to the training
+process will affect the performance and accuracy of neural network models.
+We expected our results to pave the way for future exploration of
+hardware approximate computation or storage techniques to accelerate
+and improve the training process of large-scale deep learning models.
 
-{\bf Answering the stupid questions above:}
+{\bf Metrics:} %%% Not sure about this part %%%
+We are interested in the improvement of error rate, convergence rate
+and training speed.
+We consider a 0.99\% decrease in test error rate to be significant.
+
+
 
 
