--- a/project_midway/result.tex
+++ b/project_midway/result.tex
@@ -1,11 +1,12 @@
 \section{Experimental Results}
 \label{sec:result}
 
-First Steps and Evaluation (10 points): Were the first steps described in the
-project proposal completed? Are there nontrivial preliminary results in terms of
-system performance or data collection (if data collection is a significant part
-of the project)? Is the interpretation of these results careful and correct? Is
-there an assessment of where the project stands? Are next steps clear, including
-any course corrections based on preliminary results?
+%%% First Steps and Evaluation (10 points): Were the first steps described in the project proposal completed? Are there nontrivial preliminary results in terms of system performance or data collection (if data collection is a significant part of the project)? Is the interpretation of these results careful and correct? Is there an assessment of where the project stands? Are next steps clear, including any course corrections based on preliminary results?
 
+We have conducted experiments on adding two different types of noise
+to the training process of the neural network model.
 
+The first is adding normal distributed noise to the learning rate in
+gradient descent.
+
+The second is applying a random 0/1 mask to weight matrix between layers.
