added a dropout paper

--- a/project_midway/refs.bib
+++ b/project_midway/refs.bib
@@ -5,6 +5,13 @@
   school={University of Toronto}
 }
 
+@article{hinton2012improving,
+  title={Improving neural networks by preventing co-adaptation of feature detectors},
+  author={Hinton, Geoffrey E and Srivastava, Nitish and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan R},
+  journal={arXiv preprint arXiv:1207.0580},
+  year={2012}
+}
+
 @inproceedings{wan2013dropconnect,
   title={Regularization of neural networks using dropconnect},
   author={Wan, Li and Zeiler, Matthew and Zhang, Sixin and Cun, Yann L and Fergus, Rob},
@@ -14,10 +21,10 @@
 
 @inproceedings{goodfellow13maxout,
   author    = {Ian J. Goodfellow and
-               David Warde{-}Farley and
-               Mehdi Mirza and
-               Aaron C. Courville and
-               Yoshua Bengio},
+    David Warde{-}Farley and
+      Mehdi Mirza and
+      Aaron C. Courville and
+      Yoshua Bengio},
   title     = {Maxout Networks},
   booktitle = {ICML},
   year      = {2013},
