fixed a tense typo

--- a/project_midway/intro.tex
+++ b/project_midway/intro.tex
@@ -13,7 +13,7 @@ become a significant factor in such deep learning implementations.
 {\bf Goal:}
 We intend to comprehensively study how adding noise to the training
 process will affect the performance and accuracy of neural network models.
-We expected our results to pave the way for future exploration of
+We expect our results to pave the way for future exploration of
 hardware approximate computation or storage techniques to accelerate
 and improve the training process of large-scale deep learning models.
 
