--- a/project_midway/refs.bib
+++ b/project_midway/refs.bib
@@ -29,3 +29,17 @@
   booktitle = {ICML},
   year      = {2013},
 }
+
+@inproceedings {chilimbi14adam,
+  author = {Trishul Chilimbi and Yutaka Suzue and Johnson Apacible and Karthik Kalyanaraman},
+  title = {Project Adam: Building an Efficient and Scalable Deep Learning Training System},
+  booktitle = {OSDI},
+  year = {2014},
+}
+
+@inproceedings{dean2012large,
+  title={Large scale distributed deep networks},
+  author={Dean, Jeffrey and Corrado, Greg and Monga, Rajat and Chen, Kai and Devin, Matthieu and Mao, Mark and Senior, Andrew and Tucker, Paul and Yang, Ke and Le, Quoc V and others},
+  booktitle={NIPS},
+  year={2012},
+}
