partially finished result.tex

--- a/project_midway/midway-report.tex
+++ b/project_midway/midway-report.tex
@@ -3,6 +3,8 @@
 \usepackage{hyperref}
 \hypersetup{pdfstartview={FitH},colorlinks=false,pdfborder={0 0 0},}
 \usepackage{url}
+\usepackage{amsmath}
+\usepackage{graphicx}
 %\documentstyle[nips14submit_09,times,art10]{article} % For LaTeX 2.09
 
 
@@ -15,7 +17,7 @@ Carnegie Mellon University \\
 \texttt{yixinluo@cs.cmu.edu} \\
 \And
 Fan Yang\\
-Department of Mathematicsl Sciences \\
+Department of Mathematical Sciences \\
 Carnegie Mellon University \\
 \texttt{fanyang1@andrew.cmu.edu} \\
 }
