--- a/project_midway/result.tex
+++ b/project_midway/result.tex
@@ -10,11 +10,12 @@
 We have successfully completed the first steps in the proposal.
 We implemented a deep learning neural network using Matlab and then
 switched to python because python has a nice deep learning library,
-Theano.\\
+Theano.
 Using the python library Theano, we added noise to Logistic Regression
 model and Multi-layer Logistic Regression(MLP) model.
 As a first step, we have only added noise from binomial and gaussian
-distribution. Adding noise of other distributions will be studied later.\\
+distribution. Adding noise from other distributions will be studied later
+in the second half of the project.\\
 In Logistic Regression Model, we added noise to the learning rate.
 To be more specific, the weight is updated as
 \begin{center}
@@ -49,7 +50,23 @@ distribution, it is possible that during the gradient descent we will
 step back several times. \\
 In general, the model with binomial noise converges faster than the model
 with gaussian noise, but eventually they have the same best test error
-rate.
+rate.\\
+The result of this experiment is very interesting since we did not
+expect that adding noise to learning rate would improve the accuracy
+of the model. We will study the theoretical reason behind this improvement
+of accuracy later in the project.
+
+In Multi-layer Logistic Regression Model, we applied a random $0/1$ mask to
+weights in the model to simulate Dropconnect and Dropout
+(See Related works for more details about Dropconnect and Dropout).
+In our experiment, we tried two different values of $p$, where $p$ is
+the probability of having $1$ in the mask.
+\begin{figure}
+\centering
+\caption{MLP with Noise}
+\includegraphics[width=215pt]{figs/mlp_psmall.png}
+\end{figure}
+
 
 
 
