--- a/project_midway/meth.tex
+++ b/project_midway/meth.tex
@@ -1,8 +1,7 @@
-\section{Methodology}
+\section{Datasets}
 \label{sec:meth}
 
 %Data set (5 points): Is the data set completely ready (in-hand, loaded onto a machine, analyzed for outliers or other problems)? Have some main features of the data set been characterized (either visually or statistically)?
-
 
 \subsection{MNIST}
 MNIST is a data set of handwritten digits. It contains a training set of
@@ -29,8 +28,11 @@ fine-tuning parameters of the model to better fit this dataset.
 Besides the above two datasets, we will conduct experiements on the
 following datasets as well:
 \begin{itemize}
+\vspace{-7pt}
 \item CIFAR-100 \\
-\item Street View House Numbers(SVHN)\\
-\item
+\vspace{-7pt}
+\item Street View House Numbers (SVHN)\\
+\vspace{-7pt}
+\item The NORB Dataset
 \end{itemize}
 
