--- a/project_midway/meth.tex
+++ b/project_midway/meth.tex
@@ -3,13 +3,20 @@
 
 %Data set (5 points): Is the data set completely ready (in-hand, loaded onto a machine, analyzed for outliers or other problems)? Have some main features of the data set been characterized (either visually or statistically)?
 
+We are mainly interested in pattern recognition related datasets.
+All the datasets are available online.
+In order to conduct experiments, we need to load the datasets into our
+model and fine-tune parameters of the model.
+We have been primarily working on MNIST and CIFAR-10. We plan to
+conduct experiment on four to five datasets in total.
+
 \subsection{MNIST}
 MNIST is a data set of handwritten digits. It contains a training set of
 60,000 examples and a test set of 10,000 examples. The digits have been
 size-normalized and centered in a fixed-size image.
 
-We used this data set in our first step experiments. (See Experiments for
-more details.)
+We used this data set in our first step experiments. (See Experimental
+Results for more details.)
 
 \subsection{CIFAR-10}
 CIFAR-10 is a data set of 60000 32x32 colour images in 10 classes, with
