passing intro and related works

--- a/project_midway/intro.tex
+++ b/project_midway/intro.tex
@@ -39,15 +39,9 @@ large-scale deep learning algorithms.
 More specifically, our goals include but are not limited by:
 \begin{itemize}
   \item Exploration of different types of neural network models, and different
-    parts of each model in which we can introduce noise. The neural network
-    models we study are single-layer neural network (logistic regression),
-    multi-layer neural network (mlp), convolutional neural network (LeNet).
-    Points of interest to which we introduce noise are weights stored in each
-    neuron ($W$), links connecting each two neurons, computation of each
-    neuron's output, computation associated with each neuron update.
-  \item Exploration of different noise models. We model different types of noise
-    as probabilistic distributions such as Bernoulli, Gaussian, and
-    Uniform-random distribution.
+    parts of each model in which we can introduce noise. 
+  \item Exploration of different types of noise modeled by different probability
+    distribution.
   \item Experimental study of improvements in accuracy and convergence rate when
     we train each model with different noise.
 \end{itemize}
