--- a/project_midway/meth.tex
+++ b/project_midway/meth.tex
@@ -8,7 +8,7 @@ All the datasets are available online.
 In order to conduct experiments, we need to load the datasets into our
 model and fine-tune parameters of the model.
 We have been primarily working on MNIST and CIFAR-10. We plan to
-conduct experiment on four to five datasets in total.
+conduct experiment on three to four datasets in total if time permitted.
 
 \subsection{MNIST}
 MNIST is a data set of handwritten digits. It contains a training set of
@@ -18,7 +18,7 @@ size-normalized and centered in a fixed-size image.
 We used this data set in our first step experiments. (See Experimental
 Results for more details.)
 
-\subsection{CIFAR-10}
+\subsection{CIFAR}
 CIFAR-10 is a data set of 60000 32x32 colour images in 10 classes, with
 6000 images per class. There are 50000 training images and 10000 test
 images. The dataset is divided into five training batches and one test
@@ -34,12 +34,6 @@ fine-tuning parameters of the model to better fit this dataset.
 \subsection{Other data sets}
 Besides the above two datasets, we will conduct experiements on the
 following datasets as well:
-\begin{itemize}
-\vspace{-7pt}
-\item CIFAR-100 \\
-\vspace{-7pt}
-\item Street View House Numbers (SVHN)\\
-\vspace{-7pt}
-\item The NORB Dataset
-\end{itemize}
+ Street View House Numbers (SVHN)
+ The NORB Dataset
 
