--- a/project_midway/result.tex
+++ b/project_midway/result.tex
@@ -122,5 +122,5 @@ distributions to different neural network models.
 Moreover, we want to understand why and how the noise will improve the
 accuracy of the model. We also want to study how to find the optimal
 noise for different models. Detailed plans are explained in
-Section~\ref{sec:intr}.
+Section~\ref{sec:intro}.
 
