--- a/project_midway/result.tex
+++ b/project_midway/result.tex
@@ -64,8 +64,8 @@ of accuracy later in the project.
 
 \subsection{Multi-layer Logistic Regression}
 In Multi-layer Logistic Regression Model, we applied a random $0/1$ mask to
-weights in the model to simulate DropConnect and Dropout
-(See Related Works for more details about DropConnect and Dropout).
+weights in the model to simulate DropConnect and Dropout which we have explained
+in Section~\ref{sec:related}.
 In our experiment, we tried two different values of $p$, where $p$ is
 the probability of having $1$ in the mask.
 
